--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="home-content">
                 <h3>Hello,It's Me</h3>
                 <h1>Preet</h1>
-                <h3>And I'm a <span class="multiple-text"></span></h3>
+                <h3>And I'm an <span class="multiple-text"></span></h3>
                 <div class="social-media">
                     <a href="https://github.com/shreya6360/Responsive-personal_portfolio"><i class='bx bxl-github'></i></a>
                 <!--   <a href="#"><i class='bx bxs-envelope'></i></a> -->
