--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <div class="portfolio-layer">
                         <h4>Emergancy Response Support System</h4>
                         <p>Developed an Emergency Response Support System to streamline communication between citizens and emergency services, enabling quicker and more efficient relief operations. The system integrates police, paramedics, and firefighters through a centralized app for rapid response.</p>
-                        <a href="#"><i class='bx bx-link-external' ></i></a>
+                        <a href="https://github.com/preet-k-19/Emergency_support"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
                 <div class="portfolio-box">
@@ -111,7 +111,7 @@
                     <div class="portfolio-layer">
                         <h4>Music Player </h4>
                         <p>Designed and developed a versatile music player with features like playlist creation, equalizer settings, and offline playback. The application offers a seamless audio experience with a user-friendly interface and high-quality sound output.</p>
-                        <a href="#"><i class='bx bx-link-external' ></i></a>
+                        <a href="https://github.com/preet-k-19/beats"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
             </div>
