--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h1>Preet</h1>
                 <h3>And I'm an <span class="multiple-text"></span></h3>
                 <div class="social-media">
-                    <a href="https://github.com/shreya6360/Responsive-personal_portfolio"><i class='bx bxl-github'></i></a>
+                    <a href="https://github.com/preet-k-19"><i class='bx bxl-github'></i></a>
                 <!--   <a href="#"><i class='bx bxs-envelope'></i></a> -->
                     <a href="https://www.instagram.com/preet.kaklotar_20?igsh=MXI3a2FsbzJveXE2Zw=="><i class='bx bxl-instagram' ></i></a>
                     <a href="https://www.linkedin.com/in/preet-kaklotar-7a20332a7"><i class='bx bxl-linkedin-square' ></i></a>
