--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h3>Application Developer</h3>
                 <p>As an application developer, I specialize in creating innovative and user-centric software solutions. With expertise in the full development lifecycle, 
                     I deliver high-quality applications that blend functionality with intuitive design, ensuring a seamless user experience. </p>
-                 <a href="#"class="btn">Read More</a>   
+               <!--  <a href="#"class="btn">Read More</a>   -->
             </div>
         </section>
         <section class="services"id="services">
@@ -60,14 +60,14 @@
                     <p>Motivated designer and developer
                          with experience creating custom websites through PHP and CSS. 
                          Strong collaboration skills and proven history of application development. DHTML and JavaScript. MS Access and MySQL.</p>
-                    <a href="#"class="btn">Read More</a>
+                <!--    <a href="#"class="btn">Read More</a> -->
                 </div>
         
                 <div class="services-box">
                     <i class='bx bx-crop' ></i>
                     <h3>UI/UX Design</h3>
                     <p>You cannot make a good design if you do not understand people; design is made for people.</p>
-                    <a href="#"class="btn">Read More</a>
+               <!--     <a href="#"class="btn">Read More</a> -->
                 </div>
             
                 <div class="services-box">
@@ -75,7 +75,7 @@
                     <h3>App Development</h3>
                     <p>Proficient in developing scalable and user-friendly applications, with a focus on delivering efficient and innovative solutions. Experienced in the full software development lifecycle, from concept to deployment.
                         </p>
-                    <a href="#"class="btn">Read More</a>
+              <!--      <a href="#"class="btn">Read More</a> -->
                 </div>
             </div>
         </section>
@@ -95,7 +95,7 @@
                     <div class="portfolio-layer">
                         <h4>Chat Application </h4>
                         <p>Developed a feature-rich chat application with real-time messaging, personalized user profiles, and instant notifications. Designed for seamless communication, the app enhances user engagement with a modern, intuitive interface</p>
-                        <a href="#"><i class='bx bx-link-external' ></i></a>
+                        <a href="https://github.com/preet-k-19/"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
                 <div class="portfolio-box">
@@ -103,7 +103,7 @@
                     <div class="portfolio-layer">
                         <h4>jewelry Shop Online</h4>
                         <p>Developed a responsive e-commerce website for a jewelry brand, integrating secure payment gateways and dynamic product showcases. Enhanced user experience with intuitive navigation and real-time inventory management features.</p>
-                        <a href="#"><i class='bx bx-link-external' ></i></a>
+                        <a href="https://github.com/preet-k-19/"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
                 <div class="portfolio-box">
