--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h3>And I'm an <span class="multiple-text"></span></h3>
                 <div class="social-media">
                     <a href="https://github.com/preet-k-19"><i class='bx bxl-github'></i></a>
-                <!--   <a href="#"><i class='bx bxs-envelope'></i></a> -->
+                    <a href="https://leetcode.com/u/Preet_K_20/"><i class='bx bxs-code-alt'></i></a> 
                     <a href="https://www.instagram.com/preet.kaklotar_20?igsh=MXI3a2FsbzJveXE2Zw=="><i class='bx bxl-instagram' ></i></a>
                     <a href="https://www.linkedin.com/in/preet-kaklotar-7a20332a7"><i class='bx bxl-linkedin-square' ></i></a>
                 </div>
@@ -95,7 +95,7 @@
                     <div class="portfolio-layer">
                         <h4>Chat Application </h4>
                         <p>Developed a feature-rich chat application with real-time messaging, personalized user profiles, and instant notifications. Designed for seamless communication, the app enhances user engagement with a modern, intuitive interface</p>
-                        <a href="https://github.com/preet-k-19/"><i class='bx bx-link-external' ></i></a>
+                        <a href="https://github.com/preet-k-19/connect"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
                 <div class="portfolio-box">
