--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="https://github.com/preet-k-19"><i class='bx bxl-github'></i></a>
                     <a href="https://www.instagram.com/preet.kaklotar_20?igsh=MXI3a2FsbzJveXE2Zw=="><i class='bx bxl-instagram' ></i></a>
                     <a href="https://www.linkedin.com/in/preet-kaklotar-7a20332a7"><i class='bx bxl-linkedin-square' ></i></a>
-                    <a href="https://leetcode.com/u/Preet_K_20/"><i class='bx bxs-code-alt'></i></a>
+                    <a href="https://leetcode.com/u/Preet_K_20/"><i class='bx bxl-code-alt'></i></a>
                 </div>
                 <a href="https://drive.google.com/file/d/1vvB4nmZzViuXLT3Ab8nkVtyw9_t6Hdx0/view" class="btn">CV</a>
             </div>
