--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="https://drive.google.com/file/d/1vvB4nmZzViuXLT3Ab8nkVtyw9_t6Hdx0/view" class="btn">CV</a>
             </div>
             <div class="home-img">
-                <img src="" alt="It's me but due to some issue the image is not loading ＞﹏＜">
+                <img src="myproject/image/computer_engineer-compare-page.png" alt="It's me but due to some issue the image is not loading ＞﹏＜">
             </div>
         </section>
         <section class="about" id="about">
