--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
         <section class="about" id="about">
             <div class="about-img">
-                <img src="https://wallpaperaccess.com/full/1385382.jpg" alt="">
+                <img src="myproject/image/about-2-rm.png" alt="cannot load the image right now">
             </div>
             <div class="about-content">
                 <h2 class="heading">About<span>Me</span></h2>
