--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="https://www.linkedin.com/in/preet-kaklotar-7a20332a7"><i class='bx bxl-linkedin-square' ></i></a>
                     <a href="https://leetcode.com/u/Preet_K_20/"><i class='bx bx-code-alt'></i></a> 
                 </div>
-                <a href="https://drive.google.com/file/d/1vvB4nmZzViuXLT3Ab8nkVtyw9_t6Hdx0/view" class="btn">CV</a>
+                <a href="https://drive.google.com/file/d/1BwmlZWP0gb4t2NJY_-yWhS1c0SwvpMJE/view?usp=sharing" class="btn">CV</a>
             </div>
             <div class="home-img">
                 <img src="myproject/image/computer_engineer-compare-page.png" alt="It's me but due to some issue the image is not loading ＞﹏＜">
