--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="home-content">
                 <h3>Hello,It's Me</h3>
                 <h1>Preet</h1>
-                <h3>And I'm a <span class="multiple-text"></span></h3>
+                <h3>And I'm an <span class="multiple-text"></span></h3>
                 <div class="social-media">
                     <a href="https://github.com/preet-k-19"><i class='bx bxl-github'></i></a>
                     <a href="https://www.instagram.com/preet.kaklotar_20?igsh=MXI3a2FsbzJveXE2Zw=="><i class='bx bxl-instagram' ></i></a>
