--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             
                 <div class="services-box">
-                    <i class='bx bxl-instagram-alt' ></i>
+                    <i class='bx bx-mobile-alt' ></i>
                     <h3>App Development</h3>
                     <p>Proficient in developing scalable and user-friendly applications, with a focus on delivering efficient and innovative solutions. Experienced in the full software development lifecycle, from concept to deployment.
                         </p>
