--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
                         <a href="https://github.com/preet-k-19"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
-                <div class="portfolio-box">
+                <!-- <div class="portfolio-box">
                     <img src="myproject/image/music.jpg"alt="">
                     <div class="portfolio-layer">
                         <h4>Music Player </h4>
                         <p>Designed and developed a versatile music player with features like playlist creation, equalizer settings, and offline playback. The application offers a seamless audio experience with a user-friendly interface and high-quality sound output.</p>
                         <a href="https://github.com/preet-k-19/beats"><i class='bx bx-link-external' ></i></a>
                     </div>
-                </div>
+                </div>-->
             </div>
         </section>
         
